WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
278072
WebExtensionDataRecord.h and OfflineAudioContext.cpp are missing headers
https://bugs.webkit.org/show_bug.cgi?id=278072
Summary
WebExtensionDataRecord.h and OfflineAudioContext.cpp are missing headers
Marcos Caceres
Reported
2024-08-13 18:52:26 PDT
Causing issues with unified builds.
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-08-13 18:53:11 PDT
<
rdar://problem/133806353
>
Marcos Caceres
Comment 2
2024-08-13 18:54:43 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/32161
EWS
Comment 3
2024-08-14 08:00:46 PDT
Committed
282230@main
(b2456c539c0d): <
https://commits.webkit.org/282230@main
> Reviewed commits have been landed. Closing PR #32161 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug