WebExtensionDataRecord.h and OfflineAudioContext.cpp are missing headers https://bugs.webkit.org/show_bug.cgi?id=278072 rdar://problem/133806353

Reviewed by Dan Glastonbury.

Adds missing headers.

* Source/WebCore/Modules/webaudio/OfflineAudioContext.cpp:
* Source/WebKit/UIProcess/Extensions/WebExtensionDataRecord.h:

Canonical link: https://commits.webkit.org/282230@main